style: use content-visibility to fix render blanking on fast scroll

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1795,6 +1795,8 @@ body.light-theme .modal-overlay {
   width: fit-content;
   /* Grow with content */
   min-width: 100%;
+  content-visibility: auto;
+  contain-intrinsic-size: auto 44px;
 }
 
 .block-label {
